fix(design): add overflow on x-axis for code

--- a/src/global.scss
+++ b/src/global.scss
@@ -120,6 +120,7 @@ h2 {
     border-radius: 0.25rem;
     line-height: 1.5;
     margin-left: 2rem;
+    overflow-x: auto;
     padding: 0.5rem;
     width: calc(100% - 5rem);
     code {
